--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,12 +5,15 @@
     justify-content: space-between;
     padding-left: 100px;
     padding-right: 100px;
+    align-items: center;
+
 
 }
 nav.header a{
     text-decoration: none;
     color: #fff;
     margin-left: 30px;
+    padding-top: 10px;
 
 }
 nav.header a:hover{
